# trex-converter

./: .gitignore  CHANGELOG.md  PROJECT_CONTEXT.md  README.md  T-Rex-Converter-Plan-v2.md  next-development.md  pyproject.toml  ui-guide.md
app/: __init__.py  main.py
app/core/: __init__.py  dependency.py  preset.py  presets.py  queue.py  registry.py  runner.py  settings.py  task.py
app/data/: __init__.py  database.py  models.py
app/docs/: loader.py
app/engines/: __init__.py  archive_engine.py  base.py  exiftool_engine.py  ffmpeg_engine.py  imagemagick_engine.py  inkscape_engine.py  libreoffice_engine.py  ocr_engine.py  pandoc_engine.py  pdf_engine.py  qr_engine.py  subtitle_engine.py
app/ui/: __init__.py  about_page.py  audio_options.py  conversion_page.py  dashboard_page.py  document_options.py  ebook_options.py  help_page.py  icons.py  image_options.py  main_window.py  metadata_options.py  multi_input_options.py  ocr_options.py  pdf_operations.py  preset_panel.py  qr_options.py  queue_panel.py  settings_dialog.py  settings_page.py  subtitle_options.py  svg_options.py  theme.py  video_options.py
app/utils/: paths.py
packaging/: build-deb.sh  t-rex-converter.desktop
packaging/debian/: changelog  control  copyright  install  postinst
presets/: mp3-high-quality.toml
scripts/: generate-icons.sh
tests/test_core/: test_presets.py  test_settings.py  test_task.py
tests/test_docs/: test_sync.py
tests/test_engines/: test_archive_engine.py  test_base.py  test_exiftool_engine.py  test_ffmpeg_engine.py  test_imagemagick_engine.py  test_inkscape_engine.py  (+6 more)
(+67 files in other folders)
