[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t-rex-converter"
version = "1.0.4"
description = "Native Debian GUI file converter with engine-based local processing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PyMuPDF>=1.24",
    "qtawesome>=1.4",
    "qasync>=0.27",
    "pdf2docx>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
t-rex-converter = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.docs" = ["en/*.md", "id/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
